# rust-service-template

./: .cliff.toml  .env  .env.example  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  docker-compose.yaml  run.sh  rustfmt.toml
.cargo/: audit.toml
.github/actions/setup-git-cliff/: action.yml
.github/actions/setup-rust/: action.yml
.github/actions/setup-sqlx/: action.yml
.github/actions/update-changelog/: action.yml
.github/actions/version-bump/: action.yml
.github/workflows/: ci.yml  commits.yml  release.yml
migrations/: 20250127000000_create_tasks_table.sql
rust-template-instructions/: 00-overview.md  01-prerequisites.md  02-code-quality-config.md  03-project-structure.md  04-architecture-rules.md  05-dependencies.md  06-configuration.md  07-error-handling.md  08-main-and-tracing.md  09-api-router.md  10-health-checks.md  11-cors.md  12-jwt-authentication.md  13-api-handlers.md  14-file-uploads.md  15-repository-pattern.md  16-domain-services.md  17-value-objects.md  18-dto-conversion.md  19-background-jobs.md  20-event-schema.md  21-kafka-producer.md  22-testing.md  23-docker-compose.md  24-run-script.md  25-agents.md  25-claude-md.md  26-quick-start-checklist.md  27-git-workflows.md
scripts/: install-hooks.sh
scripts/git-hooks/: pre-push
src/: common.rs  config.rs  lib.rs  main.rs
src/api/: auth.rs  error.rs  mod.rs
src/api/models/: mod.rs  (+1 more)
src/cli/: args.rs  commands.rs  generator.rs  github.rs  main.rs  mod.rs
src/domain/: errors.rs  mod.rs
src/infrastructure/: kafka_producer.rs  mod.rs  task.rs
tests/: common.rs
tests/integration/: mod.rs
(+14 files in other folders)
